--- a/Menù.htm
+++ b/Menù.htm
@@ -31,7 +31,7 @@ li a:hover {
 
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">compiti</a></li>
+  <li><a href="pecore.htm">compiti</a></li>
   <li><a href="#contact">contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
