--- a/esercizi.html
+++ b/esercizi.html
@@ -64,7 +64,7 @@ body {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
     <a href="file:///C:/Users/karim.elfeki/Desktop/operatore%20logico%20principale.html">Operatori logici</a>
-    <a href="#">Services</a>
+    <a href="https://elfekikarim.github.io/STA/calcolatoretensione.html">calcolatoretensione</a>
     <a href="#">Clients</a>
     <a href="#">Contact</a>
   </div>
