--- a/esercizi.html
+++ b/esercizi.html
@@ -67,6 +67,7 @@ body {
     <a href="https://elfekikarim.github.io/STA/calcolatoretensione.html">calcolatoretensione</a>
     <a href="#">Clients</a>
     <a href="#">Contact</a>
+    <a href="leggidiohm.htm">leggi di Ohm</a>
   </div>
 </div>
 
